--- a/lab03/src/Makefile
+++ b/lab03/src/Makefile
@@ -1,4 +1,9 @@
-run:
+ascii:
 	@gcc ascii.c
-	@gcc ascii.c -o ascii.o
-	@./ascii.o
+	@gcc ascii.c -o ascii
+	@./ascii
+
+gravity:
+	@gcc gravity.c
+	@gcc gravity.c -o gravity
+	@./gravity
